--- a/tilegame/css/control-panel.css
+++ b/tilegame/css/control-panel.css
@@ -76,7 +76,6 @@
   transition: 0.2s;
   border: none;
   z-index: 2;
-  align-items: flex-start;
 }
 
   .customiser-button:hover {
