--- a/tilegame/css/game.css
+++ b/tilegame/css/game.css
@@ -57,7 +57,6 @@
   .grid {
     width: 90%;
     max-width: 100vw;
-    max-height: 100vh;
     margin-inline: auto;
   }
 }
